--- a/redirect.html
+++ b/redirect.html
@@ -2,8 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=data:text/html;base64,PCFET0NUWVBFIGh0bWw+DQo8aGVhZD4NCjx0aXRsZT5IT0xBTVVOTEQhPC90aXRsZT4NCjwvaGVhZD4NCg0KPGJvZHk+DQo8cD5Ib2xhbW5lbmVzZSwgZWwgdW5hcyB5IGZvcm0gdGFyYWJpYSBwYXJhIHJlZGlyZWNjaW9uZXMgdG8gQ09OU1VMVE9SRSBCRSBBQ0NFU1NBTiBET1MgTkFOQ0VDT1MgTU9OVE9ORVMgQ09OU1VMVE8hPC9wPg0KPC9ib2R5Pg0K">
+    <meta http-equiv="refresh" content="0; url=nombre_del_archivo.pdf">
+    <title>Redireccionando...</title>
 </head>
 <body>
+    <p>Redireccionando...</p>
+    <script>
+        window.location.href = "nombre_del_archivo.pdf";
+    </script>
 </body>
 </html>
